# LearnOpenGL

./: .gitignore  CMakeLists.txt  notes.txt
assets/shaders/: lighting.fs
src/: main.cpp  shader.h
